# simplecc

./: .clang-format  .gitignore  CMakeLists.txt  test.sh
src/: lex.c  lex.h  main.c  platform.h  pp.h  pp_core.c  pp_dir.c  pp_expand.c  vector.h
test/: pp_err.c  pp_exp.c  pp_lines.c
test/pp/: lex_block_comment_sol.c
